--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+valabind (0.5.1-1) unstable; urgency=low
+
+  * new upstream release 
+
+ -- Sebastian Reichel <sre@debian.org>  Thu, 13 Oct 2011 01:47:04 +0200
+
 valabind (0.5-1) unstable; urgency=low
 
   * initial release (Closes: #573501)
