Imported Upstream version 0.5.2

--- a/valabind.1
+++ b/valabind.1
@@ -20,7 +20,7 @@
 .Sh DESCRIPTION
 Valabind is a program written in Vala that aims to generate SWIG interfaces (.i) from a vala-generated or hand-made vapi files.
 .Pp
-It permits to create bindings for many programming languages (like python, perl, ruby, lua, ..) interfacing with C or Vala code.
+Create bindings for many programming languages (like python, perl, ruby, lua, ..) interfacing with C or Vala code.
 .Pp
 Note that list of supported languages in valabind is not the same of swig.
 .Pp
