--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+valabind (0.5.2-1) unstable; urgency=low
+
+  * new upstream release
+   - c files were removed upstream
+   - fixed lintian typo warning
+
+ -- Sebastian Reichel <sre@debian.org>  Thu, 13 Oct 2011 02:06:20 +0200
+
 valabind (0.5.1-1) unstable; urgency=low
 
   * new upstream release
