Imported Upstream version 0.7.2

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 Generic TODO
 ============
 
---mode=gir --mode=gear --mode=swig --mode=c++
+--mode=gir --mode=swig --mode=c++
 --format=gir
 
 * Add support to compile from C, do not generate
