--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+valabind (0.7.2-1) UNRELEASED; urgency=low
+
+  * new upstream release
+
+ -- Sebastian Reichel <sre@debian.org>  Thu, 25 Oct 2012 00:53:35 +0200
+
 valabind (0.6.4-1) unstable; urgency=low
 
   * new upstream release
