--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+valabind (0.7.2-2) UNRELEASED; urgency=low
+
+  * Remove libvala-0.16-dev build depndency (not needed anymore)
+
+ -- Sebastian Reichel <sre@debian.org>  Fri, 07 Jun 2013 20:43:09 +0200
+
 valabind (0.7.2-1) unstable; urgency=low
 
   * new upstream release
