--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 valabind (0.7.2-2) UNRELEASED; urgency=low
 
-  * Remove libvala-0.16-dev build depndency (not needed anymore)
+  * build depend on vala 0.20 (Closes: #709704)
+  * bump Debian Standards Version to 3.9.4
 
  -- Sebastian Reichel <sre@debian.org>  Fri, 07 Jun 2013 20:43:09 +0200
 
