--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-valabind (0.7.2-2) UNRELEASED; urgency=low
+valabind (0.7.2-2) unstable; urgency=low
 
   * build depend on vala 0.20 (Closes: #709704)
   * bump Debian Standards Version to 3.9.4
 
- -- Sebastian Reichel <sre@debian.org>  Fri, 07 Jun 2013 20:43:09 +0200
+ -- Sebastian Reichel <sre@debian.org>  Fri, 07 Jun 2013 20:51:33 +0200
 
 valabind (0.7.2-1) unstable; urgency=low
 
