Imported Upstream version 0.7.4

--- a/valabind-cc.1
+++ b/valabind-cc.1
@@ -1,4 +1,4 @@
-.Dd May 11,2011
+.Dd Nov 15,2012
 .Dt valabind-cc \&1 "Valabind compiler frontend"
 .Os valabind-cc
 .Sh NAME
@@ -21,6 +21,7 @@
 .Op Fl I Ar path
 .Op Fl L Ar path
 .Op Fl l Ar libname
+.Op Fl D Ar SYMBOL
 .Op Fl C
 .Ar vapifile
 .Sh DESCRIPTION
