--- a/debian/changelog
+++ b/debian/changelog
@@ -4,10 +4,14 @@ valabind (0.7.4-1) UNRELEASED; urgency=low
     - Support for cTypes.
     - Support for D bindings.
     - Other fixes.
-  * debian/control: Add myself to Uploaders.
-  * debian/patches: Add suport for uint types (backported from d2a4162a47).
+  * debian/control:
+    - Add myself to Uploaders.
+    - Convert valac-0.20 dependency to valac (>= 0.20).
+    - Add Homepage and converted old Vcs links to the new URL format.
+    - Upgrade Standards-Version to 3.9.5.
+  * debian/patches: Add support for uint types (backported from d2a4162a47).
 
- -- David Martínez Moreno <ender@debian.org>  Thu, 12 Dec 2013 02:04:04 -0800
+ -- David Martínez Moreno <ender@debian.org>  Thu, 12 Dec 2013 09:26:44 -0800
 
 valabind (0.7.2-2) unstable; urgency=low
 
