- 04_proper_version: Bump version from git to 0.7.4.

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,12 +9,13 @@ valabind (0.7.4-1) UNRELEASED; urgency=low
     - Convert valac-0.20 dependency to valac (>= 0.20).
     - Add Homepage and converted old Vcs links to the new URL format.
     - Upgrade Standards-Version to 3.9.5.
-    - Build-Depends on quilt.
+    - Build-Depends on quilt and libvala-0.20-dev.
   * debian/patches:
     - 01_add_uint_swigwriter: Add support for uint types (backported from
       d2a4162a47).
     - 02_manpage_typo: Added a fix for an invalid keyword.
     - 03_fix_make_clean: Fix leftover generated .c files.
+    - 04_proper_version: Bump version from git to 0.7.4.
 
  -- David Martínez Moreno <ender@debian.org>  Thu, 12 Dec 2013 09:26:44 -0800
 
