--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+valabind (0.7.4-2) unstable; urgency=medium
+
+  * debian/patches:
+    - 06_fix_ldflags_python_php5: Fix LDFLAGS propagation in valabind-cc for
+      Python and PHP bindings.
+
+ -- David Martínez Moreno <ender@debian.org>  Fri, 20 Dec 2013 23:56:16 -0800
+
 valabind (0.7.4-1) unstable; urgency=low
 
   * New upstream release:
