--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+valabind (0.7.4-4) unstable; urgency=medium
+
+  * debian/control: Switched Sebastian and myself as Maintainer/Uploader.
+
+ -- David Martínez Moreno <ender@debian.org>  Fri, 03 Jan 2014 22:41:59 -0800
+
 valabind (0.7.4-3) unstable; urgency=low
 
   * debian/patches:
