Imported Upstream version 0.8.0

--- a/valabind.1
+++ b/valabind.1
@@ -27,7 +27,7 @@ Valabind is a program written in Vala that aims to generate nodejs, c++ or SWIG 
 .Pp
 SWIG opens the door to create bindings for Python, Perl, ruby, lua, and many other scripting languages.
 .Pp
-.Bl -tag -wdith Fl
+.Bl -tag -width Fl
 .It Fl h
 show help message
 .It Fl o Ar OUTPUT
