--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+valabind (0.8.0-2.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * Switch to vala 0.26 and fix build failures with that newer version by
+    cherry-picking a patch from upstream. (Closes: #764762, #763248)
+
+ -- Michael Biebl <biebl@debian.org>  Sat, 25 Oct 2014 20:50:32 +0200
+
 valabind (0.8.0-2) unstable; urgency=low
 
   * debian/patches/add_java7_includes: Add default includes for a Debian
