--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-valabind (0.9.0-1) UNRELEASED; urgency=medium
+valabind (0.9.0-1) unstable; urgency=low
 
   * New upstream release:
     - Lots of fixes for Vala 0.26.
@@ -6,6 +6,7 @@ valabind (0.9.0-1) UNRELEASED; urgency=medium
   * debian/patches:
     - add_nolibpython: Merged.
     - fix-build-against-0.26: Merged.
+  * debian/control: Bumped Standards-Version to 3.9.6 (no changes).
 
  -- David Martínez Moreno <ender@debian.org>  Thu, 02 Apr 2015 00:20:08 -0700
 
