--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+valabind (0.9.2-1) unstable; urgency=medium
+
+  * New upstream release
+  * Switch to vala 0.28 (Closes: #787874)
+
+ -- Sebastian Reichel <sre@debian.org>  Mon, 22 Jun 2015 00:37:28 +0200
+
 valabind (0.9.0-1) unstable; urgency=low
 
   * New upstream release:
