--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-valabind (0.10.0-1) testing; urgency=medium
+valabind (0.10.0-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Jose Luis Rivas <ghostbar@debian.org>  Thu, 16 Jun 2016 03:28:32 -0400
+ -- Jose Luis Rivas <ghostbar@debian.org>  Thu, 16 Jun 2016 12:04:28 -0400
 
 valabind (0.9.2-2) unstable; urgency=medium
 
