--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-valabind (0.10.0-resnullius1) testing; urgency=medium
+valabind (0.10.0-rndt1) testing; urgency=medium
 
   * New upstream release.
 
