--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-valabind (0.10.0-resnullius1) trusty; urgency=medium
+valabind (0.10.0-rnutrusty1) trusty; urgency=medium
 
   * New upstream release.
 
