--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-valabind (0.10.0-resnullius1) xenial; urgency=medium
+valabind (0.10.0-rnuxenial1) xenial; urgency=medium
 
   * New upstream release.
 
